1. Refactor 2. Bump version 3. Update language version